# CosmWasm-contracts-practise

./: .gitignore  package-lock.json  package.json
.github/workflows/: README.md  deploy-cw20-simple.yml  deploy-cw20.yml
check_balance/: Cargo.toml  OPTIMIZE_WASM.md  QUICK_FIX.md  package-lock.json  package.json
check_balance/artifacts/: check_balance.wasm
check_balance/scripts/: deploy_check_balance.js  get_balance.js  optimize_wasm.js  optimize_wasm.ps1  optimize_wasm.sh  optimize_wasm_docker.sh
check_balance/src/: contract.rs  lib.rs  msg.rs  state.rs
cw20/: Cargo.toml
cw20/src/: contract.rs  errors.rs  lib.rs  msg.rs  state.rs
my-first-contract/: Cargo.toml
my-first-contract/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
scripts/: check_node_version.js  deploy_cw20.js  find_latest_code.js  get_code_from_tx.js  instantiate_cw20.js  list_contracts.js  query_code.js  query_cw20.js  test_rpc.js  transfer_cw20.js
staking_protocol/: cargo.toml
staking_protocol/contracts/cw20-token/: cargo.toml
staking_protocol/contracts/cw20-token/src/: contract.rs  error.rs  msg.rs  state.rs
staking_protocol/contracts/staking/: cargo.toml
staking_protocol/contracts/staking/src/: contract.rs  error.rs  msg.rs  state.rs
staking_protocol/contracts/staking/tests/: integration.rs
standart_cw20/: Cargo.toml
standart_cw20/.cargo/: config.toml
standart_cw20/artifacts/: standart_cw20.wasm
standart_cw20/scripts/: optimize_wasm.ps1
standart_cw20/src/: contract.rs  error.rs  msg.rs  state.rs
