[package]
name = "cw20"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "2.1"
cosmwasm-schema = "2.1"
cw-ownable = "2.0"
cw-storage-plus = "2.0"
cw2 = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"
ed25519-zebra = { version = "4.1", features = ["alloc"] }

[dev-dependencies]
cw-multi-test = "2.1"
